bin_PROGRAMS = merge quick_sort linked_list heap bst llt
merge_SOURCES = merge.c merge_main.c util.c
quick_sort_SOURCES = quick_sort.c quick_sort_main.c util.c
linked_list_SOURCES = linked_list.c util.c linked_list_main.c
heap_SOURCES = heap.c util.c heap_main.c
bst_SOURCES = bst.c util.c bst_main.c
llt_SOURCES = linked_list_tree.c linked_list_tree_main.c
